--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,10 @@
 	--color-link-visited: #b359b3;
 }
 
+[color-scheme="dark"] img.invertable {
+	filter: invert(1);
+}
+
 body {
 	margin: auto;
 	font-family: Helvetica, Arial, sans-serif;
@@ -37,39 +41,32 @@ a:visited {
 	color: var(--color-link-visited);
 }
 
-address {
-	font-style: inherit;
+a.no-visited-style:visited {
+	color: var(--color-link);
 }
 
-address a:visited {
-	color: var(--color-link);
+address {
+	font-style: inherit;
 }
 
 h1 {
 	margin: 0;
 }
 
-h1 a:visited {
-	color: var(--color-link);
-}
-
 h2 {
 	font-size: inherit;
-}
-
-section *:first-child {
 	margin-bottom: 0;
 }
 
-section *:nth-child(2) {
+h2 + * {
 	margin-top: 0;
 }
 
-section *:nth-child(2) *:first-child {
+h2 + * :first-child {
 	margin-top: 0;
 }
 
-ul {
+ul.list-style-none {
 	list-style-type: none;
 	padding-inline-start: 0;
 }
